Use Integer.valueOf instead of constructor.